exports[`ResultDetailHeader component should render when logged in 1`] = `
<div
  className="panel panel--accent">
  <div
    className="panel__body">
    <div
      className="float--right">
      <span
        className="popover__group"
        onClick={[Function]}>
        <a
          className="actionLink"
          onClick={[Function]}
          style={Object {}}
          title="Share">
          Share
        </a>
        <div
          className="popover copyPopover popover--l popover--rightAligned popover--bottom">
          <h6
            className="text--left copyPopover__label">
            <i
              className="fa fa-check-circle " />
             Copied to Clipboard!
          </h6>
          <p
            className="copyPopover__copiedString">
            http://localhost/
          </p>
          <input
            className="copyPopover__hidden"
            readOnly={true}
            value="http://localhost/" />
        </div>
      </span>
    </div>
    <span>
      <div
        className="dkimResultDetailHeader">
        <span
          className="dkimResultDetailHeader__label">
          1
        </span>
        <span
          className="dkimResultDetailHeader__value">
          2
        </span>
        <span
          className="dkimResultDetailHeader__value">
          3
        </span>
      </div>
      <div
        className="dkimResultDetailHeader">
        <span
          className="dkimResultDetailHeader__label">
          a
        </span>
        <span
          className="dkimResultDetailHeader__value">
          b
        </span>
        <span
          className="dkimResultDetailHeader__value">
          c
        </span>
      </div>
      <div
        className="dkimResultDetailHeader">
        <span
          className="dkimResultDetailHeader__label">
          cool
        </span>
        <span
          className="dkimResultDetailHeader__value">
          story
        </span>
        <span
          className="dkimResultDetailHeader__value">
          bro
        </span>
      </div>
    </span>
  </div>
  <div
    className="panel__body">
    <span
      className="dkimResultDetailHeader__label">
      status
    </span>
    <span
      className="dkimResultDetailHeader__value has-error">
      <i
        className="fa fa-exclamation-circle " />
       
    </span>
  </div>
</div>
`;

exports[`ResultDetailHeader component should render when not logged in 1`] = `
<div
  className="panel panel--accent">
  <div
    className="panel__body">
    <div
      className="float--right">
      <span
        className="popover__group popover__hoverTrigger">
        <a
          className="actionLink"
          href="https://TEST.sparkpost.com/sign-up?return=http://localhost/"
          title="Save Results">
          Save Results
        </a>
        <span
          className="popover popover--top popover--m">
          Create a free SparkPost account or login into your account to save results
        </span>
      </span>
      <span
        className="popover__group"
        onClick={[Function]}>
        <a
          className="actionLink"
          onClick={[Function]}
          style={Object {}}
          title="Share">
          Share
        </a>
        <div
          className="popover copyPopover popover--l popover--rightAligned popover--bottom">
          <h6
            className="text--left copyPopover__label">
            <i
              className="fa fa-check-circle " />
             Copied to Clipboard!
          </h6>
          <p
            className="copyPopover__copiedString">
            http://localhost/
          </p>
          <input
            className="copyPopover__hidden"
            readOnly={true}
            value="http://localhost/" />
        </div>
      </span>
    </div>
    <span>
      <div
        className="dkimResultDetailHeader">
        <span
          className="dkimResultDetailHeader__label">
          1
        </span>
        <span
          className="dkimResultDetailHeader__value">
          2
        </span>
        <span
          className="dkimResultDetailHeader__value">
          3
        </span>
      </div>
      <div
        className="dkimResultDetailHeader">
        <span
          className="dkimResultDetailHeader__label">
          a
        </span>
        <span
          className="dkimResultDetailHeader__value">
          b
        </span>
        <span
          className="dkimResultDetailHeader__value">
          c
        </span>
      </div>
      <div
        className="dkimResultDetailHeader">
        <span
          className="dkimResultDetailHeader__label">
          cool
        </span>
        <span
          className="dkimResultDetailHeader__value">
          story
        </span>
        <span
          className="dkimResultDetailHeader__value">
          bro
        </span>
      </div>
    </span>
  </div>
  <div
    className="panel__body">
    <span
      className="dkimResultDetailHeader__label">
      status
    </span>
    <span
      className="dkimResultDetailHeader__value has-error">
      <i
        className="fa fa-exclamation-circle " />
       
    </span>
  </div>
</div>
`;

exports[`ResultDetailHeader component should render with rows 1`] = `
<div
  className="panel panel--accent">
  <div
    className="panel__body">
    <div
      className="float--right">
      <span
        className="popover__group popover__hoverTrigger">
        <a
          className="actionLink"
          href="https://TEST.sparkpost.com/sign-up?return=http://localhost/"
          title="Save Results">
          Save Results
        </a>
        <span
          className="popover popover--top popover--m">
          Create a free SparkPost account or login into your account to save results
        </span>
      </span>
      <span
        className="popover__group"
        onClick={[Function]}>
        <a
          className="actionLink"
          onClick={[Function]}
          style={Object {}}
          title="Share">
          Share
        </a>
        <div
          className="popover copyPopover popover--l popover--rightAligned popover--bottom">
          <h6
            className="text--left copyPopover__label">
            <i
              className="fa fa-check-circle " />
             Copied to Clipboard!
          </h6>
          <p
            className="copyPopover__copiedString">
            http://localhost/
          </p>
          <input
            className="copyPopover__hidden"
            readOnly={true}
            value="http://localhost/" />
        </div>
      </span>
    </div>
    <span>
      <div
        className="dkimResultDetailHeader">
        <span
          className="dkimResultDetailHeader__label">
          1
        </span>
        <span
          className="dkimResultDetailHeader__value">
          2
        </span>
        <span
          className="dkimResultDetailHeader__value">
          3
        </span>
      </div>
      <div
        className="dkimResultDetailHeader">
        <span
          className="dkimResultDetailHeader__label">
          a
        </span>
        <span
          className="dkimResultDetailHeader__value">
          b
        </span>
        <span
          className="dkimResultDetailHeader__value">
          c
        </span>
      </div>
      <div
        className="dkimResultDetailHeader">
        <span
          className="dkimResultDetailHeader__label">
          cool
        </span>
        <span
          className="dkimResultDetailHeader__value">
          story
        </span>
        <span
          className="dkimResultDetailHeader__value">
          bro
        </span>
      </div>
    </span>
  </div>
  <div
    className="panel__body">
    <span
      className="dkimResultDetailHeader__label">
      status
    </span>
    <span
      className="dkimResultDetailHeader__value has-error">
      <i
        className="fa fa-exclamation-circle " />
       
    </span>
  </div>
</div>
`;
